fixed header img padding
Fixed the problem of overlapping  nav bar and header img.

--- a/css/style.css
+++ b/css/style.css
@@ -137,8 +137,8 @@ header img{
   height: 40px;
   width: 40px;
   padding-top: 20px;
-  padding-left: 70px;
   padding-bottom: 20px;
+  margin-left: 70px;
   float: left;
 }
 
